fix: remove overlapping elements with css padding

--- a/static/styles/rewards/gift-cards.css
+++ b/static/styles/rewards/gift-cards.css
@@ -167,7 +167,6 @@
   position: fixed;
   bottom: 0;
   width: 100%;
-  padding: 4px;
   color: #000;
 }
 
